<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_view_mode"
        android:visible="true">
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete_white"
            android:orderInCategory="100"
            android:title="@string/action_delete"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_edit_white"
            android:orderInCategory="200"
            android:title="@string/action_edit"
            app:showAsAction="always"/>
    </group>
    <group
        android:id="@+id/group_edit_mode"
        android:visible="false">
        <item
            android:id="@+id/action_cancel"
            android:icon="@drawable/ic_cancel_white"
            android:orderInCategory="100"
            android:title="@string/action_cancel"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_confirm"
            android:icon="@drawable/ic_done_white"
            android:orderInCategory="200"
            android:title="@string/action_confirm"
            app:showAsAction="always"/>
    </group>
</menu>